--- a/LWCLearnings/force-app/main/default/lwc/accountSearch/accountSearch.html
+++ b/LWCLearnings/force-app/main/default/lwc/accountSearch/accountSearch.html
@@ -5,6 +5,9 @@
                 <lightning-input label="Account Name" value={accName} onchange={handleChange}>                    
                 </lightning-input>
             </lightning-layout-item>
+            <lightning-layout-item>
+                This is the second layout item.. will code here later
+            </lightning-layout-item>
         </lightning-layout>
     </lightning-card>   
 </template>
